<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llDownloadUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/layout_padding_8dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_padding_8dp"
                android:minHeight="?attr/listPreferredItemHeight"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/layout_padding_16dp"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/layout_padding_8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tvUpdateAvailable"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:text="@string/app_update_available"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUpdateAvailableMessage"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_update_available_message"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUpdateAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/layout_padding_16dp"
                android:layout_marginBottom="@dimen/layout_padding_8dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLater"
                    style="@style/MaterialButtonStyle.Bordered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_padding_16dp"
                    android:layout_weight="1"
                    android:text="@string/later" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDownloadInstall"
                    style="@style/MaterialButtonStyle.Bordered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_padding_16dp"
                    android:layout_weight="1"
                    android:text="@string/update" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUpdateDownloadProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/layout_padding_16dp"
                android:layout_marginBottom="@dimen/layout_padding_8dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.5"
                    android:scaleY="0.5" />

                <TextView
                    android:id="@+id/tvUpdateProgress"
                    style="@style/MaterialButtonStyle.Bordered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_padding_16dp"
                    android:layout_weight="1"
                    android:text="@string/downloading" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.2dp"
                android:layout_marginEnd="@dimen/layout_padding_8dp"
                android:alpha="0.3"
                android:background="#979797" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/in_app_update" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
